# Northumbria-Squash-Fixture-Bot

./: .gitignore  2  LICENSE  README.md  countMatches.py  count_matches.py  find_squash_leagues.py  league_searcher.py  main.py  player.py  pyproject.toml  requirements.txt  test.py  todo.md
.github/workflows/: python-app.yml
src/: find_squash_leagues.py  player.py
tests/: northumbria_divlist.html  test_league_searcher.py  test_main.py
tests/cassettes/test_main/: test_get_competition_id_resolves_name.yaml  test_get_division_list_returns_correct_domains.yaml
