[project]
name = "league-bot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
	"requests",
	"pandas",
	"beautifulsoup4",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-recording"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8)
    "W",   # pycodestyle warnings (PEP 8)
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming conventions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

